# sarvalanche

./: .gitignore  CITATION.cff  README.md  environment.yml  py38_environment.yml  pydensecrf_environment.yml  pyproject.toml
scripts/: classify_all_tracks.py  compute_melt_filtered_d_empirical.py  example_run.py  fast_example.py  fetch_hrrr_temperature.py  finetune_track_encoder.py  join_debris_shapes.py  manual_track_labeling.py  ml_sequence_total.py  nc_to_geotiff.py  test_workers.py  train_track_classifier.py  train_track_encoder.py  transformer_plotting.py  transformer_training.py  transformer_training_notpaper.py  visualize_seg_examples.py
scripts/RTC_predictor/: transformer_plotting.py  transformer_training.py
scripts/data_acquisition/: fetch_hrrr_temperature.py  fix_gaps.sh  get_avalanche_observations.py  get_forecast_dangers.py  get_forecast_zone_geojson.py  high_danger_runs.py  low_danger_runs.py  prepare_center_datasets.py  run_hrrr_snfac_all.sh  run_remaining_centers.sh
scripts/debris_pixel_classifier/: architecture_ideas.md  experiment_results.md  export_pair_geotiffs.py  generate_all_track_seg_features.py  old_train_track_encoder.py  prepare_netcdf.py  train_config.yaml  train_config_alaska.yaml  train_config_combined.yaml  train_config_utah.yaml  train_debris_encoder.py  train_pairwise.py  train_siamese.py  train_tinycd.py  visualize_seg_examples.py
scripts/evaluation/: README.md  evaluate_observations.py  run_zone_inference.py
scripts/issw_analysis/: build_season_dataset.py  date_to_date_debris_analysis.ipynb  debris_signal_persistence.ipynb  dual_tau_season_runner.py  high_danger_runs.py  low_danger_runs.py  manual_detections_exploration.ipynb  migrate_track_labels.py  observations_tracks_comparison.ipynb  run_cnn_whole_scene.py  synthetic_cnn_examples.py  temporal_bleed.ipynb  temporal_weight_comparison.ipynb
scripts/manual_labeling/: full_season_manual_labeler.py  manual_track_labeling.py  nc_to_geotiff.py  neg_hunt_labeling.py  patch_labeler.py  review_cnn_shapes.py
scripts/manuals/: manual_points.ipynb
scripts/plotting/: cnfaic_figures.py  cnfaic_temperature_figures.py  plot_melt_filtered_d_empirical.py
scripts/rtc_timeseries_predictor/: transformer_training_notpaper.py
scripts/temporal_classifier/: notes.md  (+3 more)
tests/: conftest.py  pytest.ini  test_prepare_dataset.py
(+274 files in other folders)
