[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sarvalanche"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="Zach Hoppinen", email="zachhoppinen@gmail.com"}
]
description = "Avalanche debris detection from Sentinel-1 and NISAR SAR imagery"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "xarray>=2023.12",
    "numpy>=2.4.1",
    "shapely>=2.1.0",
    "rioxarray>=0.20.0",
    "h5py>=3.15.1",
]

dynamic = ["version"]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/zachhoppinen/sarvalanche"
Documentation = "https://github.com/zachhoppinen/sarvalanche#readme"

[project.scripts]
sarvalanche = "sarvalanche.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "ANN", # annotations
    "PTH", # use-pathlib
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D1", "ANN"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
install_types = true
non_interactive = true
pretty = true
disable_error_code = ["import-untyped"]
